[Fix] Wallet Money Input: text-align, font-szie

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -173,7 +173,8 @@ body {
   .wallet--money__input {
     width: 100%;
     height: 80px;
-    font-size: 2rem;
+    font-size: 3rem;
+    text-align: right;
   }
 
   .wallet--money__input::placeholder {
